tests/reject/two_stmts_one_line.ty
# both compilers must reject two statements on one line (a missing newline);
# the trailing stmt here is a misplaced continue.
fn main():
    i := 0
    for i < 3:
        print("x")  continue
        i = i + 1
